[package]
name = "raspi-vision"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
libcamera = { version = "0.7.0", features = ["vendor_draft"] }
nalgebra = { version = "0.34.2", features = ["serde-serialize"] }
radsort = "0.1.1"
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
